fixed dark mode flicker

--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -16,6 +16,7 @@
       var el = document.documentElement;
       el.classList.remove("light", "dark");
       el.classList.add(theme);
+      el.style.colorScheme = theme;
     })();
   </script>
   <div id="root"></div>
